<resources>
    <string name="app_name">StickerPocket</string>
    <string name="home">Sticker</string>
    <string name="more_stickers">More Sticker</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_content_description">sticker image</string>
    <string name="background_image">background image</string>
    <string name="search">Search my stickers</string>
    <string name="filter_image_button">filter image button</string>
    <string name="trending">Trending :</string>
    <string name="download_msg">Please wait.. Downloading sticker</string>
    <string name="contact_us">Contact Us</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="deleted_stickers">Deleted Stickers</string>
    <string name="tutorials">Tutorials</string>
    <string name="tip_of_the_day">Tip of the Day</string>
    <string name="send_sticker_from_app">Send Sticker from App</string>
    <string name="send_sticker_from_keyboard">Send Sticker from Keyboard</string>
    <string name="setup_sticker_pocket_keyboard">Setup Sticker Pocket Keyboard</string>
    <string name="open_sticker_pocket_keyboard">Open Sticker Pocket Keyboard</string>
    <string name="import_stickers_from_photo">Import Stickers from Photo</string>
    <string name="import_stickers_from_whatsapp">Import Stickers from WhatsApp</string>
    <string name="sticker_pocket_layout">Sticker Pocket Layout</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="reorganize_pockets">Reorganize Pockets</string>
    <string name="manage_pockets">Manage Pockets</string>
    <string name="move_multiple_stickers_to_new_pocket">Move Multiple Stickers to New Pocket</string>
    <string name="move_sticker_to_new_pocket">Move Sticker to New Pocket</string>
    <string name="reorder_stickers">Reorder Stickers</string>
    <string name="add_tags_to_sticker">Add Tags to Sticker</string>
    <string name="manage_sticker">Manage Sticker</string>
    <string name="download_sticker">Download Sticker</string>
    <string name="no_stickers_found">No Sticker was found for this tag</string>
    <string name="select_topic">Please select topic</string>
    <string name="enter_other_topic">Please enter other topic</string>
    <string name="please_enter_subject">Please enter subject</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_attach_media">Please add Pictures or Videos when contacting us to help us understand your message</string>
    <string name="choose_a_topic">Choose a Topic</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="other">Enter Other Topic</string>
    <string name="enter_description">Enter Description</string>
    <string name="upload_media">Upload Media</string>
    <string name="upload_image_content_description">upload image content description</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="info">Info</string>
    <string name="delete_category">Delete Category</string>
    <string name="reorganize">Reorganize</string>
    <string name="new_category">New Category</string>
    <string name="id">ID</string>
    <string name="source">Source</string>
    <string name="creator">Creator</string>
    <string name="tags">Tags</string>
    <string name="add">Add</string>
    <string name="choose_an_emoji">Choose an Emoji</string>
    <string name="ok">ok</string>
    <string name="clear_all">Clear All</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="move">Move</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="giphy">Giphy</string>
    <string name="tenor">Tenor</string>
    <string name="power_by_giphy">Power by Giphy</string>
    <string name="power_by_tenor">Power by Tenor</string>
    <string name="share_using">Download the Sticker Pocket app! It makes organizing and finding your stickers extremely easy and fast!</string>
</resources>