<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".presentation.SettingsFragment">

    <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:layout_margin="@dimen/dimen_32dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/app_icon"
        app:layout_constraintBottom_toTopOf="@+id/img_screen_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <ImageView
        android:id="@+id/img_screen_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_app_icon"
        app:layout_constraintVertical_chainStyle="spread" />

    <LinearLayout
        android:id="@+id/ll_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/cv_border_rectangle"
        android:elevation="@dimen/dimen_4dp"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginVertical="@dimen/dimen_12dp"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_screen_bg">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tip_of_the_day"
            style="@style/Widget.AppCompat.TextView.Options"
            android:text="@string/tip_of_the_day"
            app:drawableStartCompat="@drawable/ic_tips" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tutorials"
            android:text="@string/tutorials"
            android:paddingTop="@dimen/dimen_8dp"
            style="@style/Widget.AppCompat.TextView.Options"
            app:drawableStartCompat="@drawable/ic_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginVertical="@dimen/dimen_12dp"
        android:background="@drawable/cv_border_rectangle"
        android:elevation="@dimen/dimen_4dp"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_first">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_deleted_stickers"
            style="@style/Widget.AppCompat.TextView.Options"
            android:text="@string/deleted_stickers"
            app:drawableStartCompat="@drawable/ic_deleted" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_backup_restore"
            style="@style/Widget.AppCompat.TextView.Options"
            android:paddingTop="@dimen/dimen_8dp"
            android:text="@string/backup_restore"
            app:drawableStartCompat="@drawable/ic_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginVertical="@dimen/dimen_12dp"
        android:background="@drawable/cv_border_rectangle"
        android:elevation="@dimen/dimen_4dp"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_second">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tell_friend"
            style="@style/Widget.AppCompat.TextView.Options"
            android:text="@string/tell_a_friend"
            app:drawableStartCompat="@drawable/ic_search" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_contact_us"
            style="@style/Widget.AppCompat.TextView.Options"
            android:paddingTop="@dimen/dimen_8dp"
            android:text="@string/contact_us"
            app:drawableStartCompat="@drawable/ic_contact" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_version_details"
        style="@style/Widget.AppCompat.TextView.Options"
        android:text="Version 1.0"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dimen_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>