<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary"
    tools:context=".presentation.settings.ContactUsFragment">

    <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:layout_margin="@dimen/dimen_32dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/app_icon_new"
        app:layout_constraintBottom_toTopOf="@+id/img_screen_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <ImageView
        android:id="@+id/img_screen_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_app_icon"
        app:layout_constraintVertical_chainStyle="spread" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
       android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@drawable/cv_border_rectangle"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dimen_70dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_screen_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_screen_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.AppCompat.TextView.Header"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:text="@string/contact_us" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/app_icon_new" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:paddingVertical="@dimen/dimen_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_choose_topic"
                    style="@style/Widget.App.TextInputLayout.Dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/actv_choose_a_topic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/choose_a_topic"
                        android:lines="1"
                        android:focusableInTouchMode="false"
                        android:singleLine="true"
                        tools:text="Choose a topic" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_other"
                    style="@style/Widget.App.TextInputLayout.Light"
                    app:hintAnimationEnabled="false"
                    android:layout_marginTop="-5dp"
                    android:visibility="gone"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
                        android:hint="@string/other"

                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/other"
                    style="@style/Widget.App.TextInputLayout.Light"
                    app:hintAnimationEnabled="false"
                    android:layout_marginTop="-5dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
                        android:hint="@string/enter_subject"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_description"
                    style="@style/Widget.App.TextInputLayout.Light"
                    app:hintAnimationEnabled="false"
                    android:layout_marginTop="-5dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_description"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_100dp"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
                        android:gravity="top"
                        android:hint="@string/enter_description"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:maxLines="8" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/imagePickerLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_circle"
                        android:contentDescription="@string/upload_image_content_description"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        app:tint="@color/color_primary" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Widget.AppCompat.TextView.Options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_media" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="@dimen/dimen_150dp"
                    android:layout_gravity="center"
                    style="@style/Widget.App.Button"
                    android:layout_margin="@dimen/dimen_15dp"
                    android:text="@string/submit"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>