<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SlideFragment">

    <View
        android:id="@+id/view_top_bg"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_150dp"
        android:background="@color/color_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/app_icon_new"
        android:layout_margin="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <ImageView
        android:id="@+id/img_screen_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top_bg"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_12dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view_top_bg"
        app:layout_constraintStart_toStartOf="@+id/view_top_bg"
        app:strokeColor="@android:color/transparent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:strokeColor="@android:color/transparent"
        android:layout_margin="@dimen/dimen_12dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_top_bg"
        app:layout_constraintEnd_toEndOf="@+id/view_top_bg" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_screen_bg"
        app:layout_constraintTop_toBottomOf="@+id/view_top_bg" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_tutorial_index"
        style="@style/Widget.AppCompat.TextView.Options"
        android:layout_width="wrap_content"
        android:text="0/0"
        android:layout_marginBottom="24dp"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>