<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".presentation.MoreStickersFragment">

    <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        style="@style/Widget.App.TextInputLayout.Dark"
        android:layout_width="0dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:endIconDrawable="@drawable/ic_outline_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_app_icon"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="textCapWords"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_screen_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_search" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_trending_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending"
        android:textStyle="italic"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:textColor="@color/color_primary_variant"
        android:text="Power by Giphy"
        app:layout_constraintBottom_toBottomOf="@+id/tv_trending_title"
        app:layout_constraintStart_toEndOf="@+id/tv_trending_title"
        app:layout_constraintTop_toTopOf="@+id/tv_trending_title" />

    <com.giphy.sdk.ui.views.GiphyGridView
        android:id="@+id/rv_sticker_section"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/dimen_4dp"
        app:gphCellPadding="@dimen/dimen_10dp"
        app:gphSpanCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_trending_title"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/cv_sticker_section_item" />

    <LinearLayout
        android:id="@+id/ll_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="@dimen/dimen_4dp"
        android:visibility="gone"
        android:padding="@dimen/dimen_12dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_screen_bg"
        app:layout_constraintEnd_toEndOf="@+id/img_screen_bg"
        app:layout_constraintStart_toStartOf="@+id/img_screen_bg"
        app:layout_constraintTop_toTopOf="@+id/img_screen_bg">

        <ProgressBar
            android:layout_width="@dimen/dimen_24dp"
            android:layout_height="@dimen/dimen_24dp"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:backgroundTint="@color/color_primary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_download_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_msg"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/color_primary_variant"
            android:textStyle="italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>